# chess

./: CMakeLists.txt  Makefile  README.md  board.cpp  board.hpp  main.cpp  move.hpp  moveBishop.cpp  moveBishop.hpp  moveBlackPawn.cpp  moveBlackPawn.hpp  moveFactory.cpp  moveFactory.hpp  moveKing.cpp  moveKing.hpp  moveKnight.cpp  moveKnight.hpp  moveQueen.cpp  moveQueen.hpp  moveRook.cpp  moveRook.hpp  moveWhitePawn.cpp  moveWhitePawn.hpp  piece.cpp  piece.hpp  player.cpp  player.hpp  test  valgrind_suppressions.txt
GUI/header/: game_object.hpp  gui_board.hpp  texture_manager.hpp
GUI/src/: game_object.cpp  gui_board.cpp  texture_manager.cpp
googletest/: WORKSPACE
googletest/ci/: linux-presubmit.sh
googletest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  primer.md
googletest/docs/_data/: navigation.yml
googletest/docs/reference/: matchers.md
googletest/googlemock/test/: BUILD.bazel
googletest/googletest/include/gtest/: gtest-matchers.h  gtest-printers.h
googletest/googletest/include/gtest/internal/: gtest-param-util.h
googletest/googletest/src/: gtest-filepath.cc
tests/: bishop_test.hpp  board_test.hpp  bpawn_test.hpp  king_test.hpp  knight_test.hpp  piece_test.hpp  player_test.hpp  queen_test.hpp  rook_test.hpp  unit_test.cpp  wpawn_test.hpp
